make sure corsor is visible on every background to work better with css-color-highlighting plugin

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -28,7 +28,9 @@
   }
 
   .cursor {
-    border-color: @text;
+    border-left: 1px solid @text;
+    width: 2px;
+    background: @base;
   }
 
   .selection .region {
